@@ -1,0 +1,4 @@
+Lelylan::Type.configure do |config|
+  config.username = 'alice@example.com'
+  config.password = 'example'
+end
